[gd_scene load_steps=5 format=3 uid="uid://dfxia4yhqfq1j"]

[ext_resource type="Script" path="res://src_nui/map_obj/bounce.gd" id="1_awebp"]
[ext_resource type="Texture2D" uid="uid://ebbwpoy1ti26" path="res://assets/sprites/mushroom_bounce_pad.png" id="2_nn4hd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h0faj"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbh8s"]
size = Vector2(71.5, 30.5)

[node name="Bounce" type="Node2D"]
script = ExtResource("1_awebp")

[node name="Bounce_body" type="AnimatableBody2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounce_body"]
position = Vector2(-2, -17)
shape = SubResource("CircleShape2D_h0faj")

[node name="ColorRect" type="ColorRect" parent="Bounce_body"]
visible = false
offset_right = 71.0
offset_bottom = 67.0
color = Color(1, 0, 1, 1)

[node name="bounce_area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounce_area"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_wbh8s")

[node name="MushroomBouncePad" type="Sprite2D" parent="."]
position = Vector2(-2, -32)
texture = ExtResource("2_nn4hd")

[connection signal="body_entered" from="bounce_area" to="." method="_on_bounce_area_body_entered"]
[connection signal="body_exited" from="bounce_area" to="." method="_on_bounce_area_body_exited"]
